# smart-library

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 20250723_01_create_books.py  20250724_01_title_unique.py
app/application/books/: book_controller.py
app/application/v1/: book_controller.py  schemas.py
app/application/v1/books/: book_controller.py  book_service.py  schemas.py
app/config/: settings.py
app/domain/books/: book.py  book_repository.py
app/errors/: base.py  handler.py
app/infrastructure/: base.py  database.py
app/infrastructure/books/: book_repository_postgres.py  models.py
