[tool.poetry]
name = "smart-library"
version = "0.1.0"
description = "API de livraria com FastAPI, DDD, Clean Architecture e PostgreSQL"
authors = ["Seu Nome <seu@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
pydantic = "^2.0.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
